--- a/client/src/pages/HomePage.css
+++ b/client/src/pages/HomePage.css
@@ -4,8 +4,11 @@
   background: hsl(var(--background));
   margin: 0;
   padding: 0;
-  position: relative;
+  position: absolute;
   top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
 }
 
 .main-content {
